Fix title wrapping

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -200,7 +200,7 @@ div .caption {
 }
 
 .snippet-card-title {
-  font-size: 20px;
+  font-size: 18px;
 }
 
 img.snippet-card-avatar {
